--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,42 +1,14 @@
-/*Declaration of CSS variables for light/dark theme*/
-
-html[data-theme="light"] {
-    --col-icon: black;
-    --col-bd-radius: rgb(2, 2, 2);
-    --col-box-shadow: #000000 2px 2px 4px,
-        #4D4D4D -2px -2px 4px;
-    --col-box-shadow-hover: inset #8a7373 2px 2px 4px,
-        inset #4D4D4D -2px -2px 4px;
-    --col-bd-icon: transparent;
-    --bg-icon: #fff;
-    --bg1-color: #fff;
-    --col-icon-linkedin: #0e76a8;
-    --col-icon-instagram: rgb(201, 94, 174);
-    --shadow-col: rgba(0, 0, 0, 0.3);
-}
-
-html[data-theme="dark"] {
-    --col-icon: white;
-    --col-bd-radius: black;
-    --col-bd-icon: transparent;
-    --col-box-shadow: 5px 5px 10px rgba(22, 21, 21, 0.7), -5px -5px 10px rgba(255, 255, 255, 0.1);
-    --col-box-shadow-hover: inset rgba(255, 255, 255, 1) 2px 2px 4px,
-        inset rgba(255, 255, 255, 0.5) -2px -2px 4px;
-    --col-icon-linkedin: #0e76a8;
-    --col-icon-instagram: rgb(201, 94, 174);
-    --col-white: #fff;
-}
-
 /* Particle effect*/
 body {
     font-family: "Poppins";
 }
 
-#home{
+#home {
     height: 100vh;
     width: 100%;
     overflow: hidden;
 }
+
 #particles-js {
     height: 100vh;
     min-height: 750px;
@@ -49,7 +21,7 @@ body {
     position: absolute;
     top: 0;
     width: 100%;
-    margin-top:192px;
+    margin-top: 192px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,7 +42,8 @@ body {
     justify-content: center;
     font-size: 25px;
 }
-.name{
+
+.name {
     font-weight: bold;
 }
 
@@ -92,25 +65,25 @@ body {
 }
 
 /* User skills */
-.part-2{
+.part-2 {
     margin-top: 36px;
 }
-.user-skills{
-    font-size: 25px ;
+
+.user-skills {
+    font-size: 25px;
 }
 
 /* User Skills Animation */
 .animated-text span {
     display: none;
-    line-height: 1;
+    /* line-height: 1; */
 }
 
 .animated-text span.active {
     display: inline;
 }
 
-.animated-text:after {
+.animated-text::after {
     content: ".";
     width: 6px;
-    background: var(--col-icon);
 }
